# dbus-tool

./: README  generate.py
ndbus/: __init__.py  narg.py  niface.py  nmethod.py  nobject.py  nservice.py  nsignal.py  nutils.py
templates/: Makefile.am.object  Makefile.am.session  Makefile.am.system  configure.ac  main.c  object.gob  package.conf  service.session  service.system
test/: iface-test.xml  project.xml
